# fin-report

backend/: .env  Cargo.toml
backend/data/: sqlite.db  sqlite.db-shm  sqlite.db-wal
backend/migrations/: 20240311212322_create_transactions_table.up.sql
backend/src/: main.rs
backend/src/graphql/: schema.rs  types.rs
backend/src/models/: mod.rs  product.rs  sale_order.rs  seeds.rs  transaction.rs
backend/src/schemas/: schema.rs
